--- a/.github/workflows/rust_actions.yml
+++ b/.github/workflows/rust_actions.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Rust Test with Github Actions
 
 on:
   push:
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      WORKING_DIR: sqlite
+      WORKING_DIR: rust_files
 
     steps:
     - name: Checkout code
