--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-pylint
-pytest
-click
-black
-pytest-cov
-matplotlib
-pandas
-openpyxl
+pylint == 2.15.3
+pytest == 7.1.3
+click == 8.1.7
+black == 22.3.0
+pytest-cov == 5.0.0
+matplotlib == 3.8.4
+pandas == 2.2.2
+openpyxl == 3.1.5
 fire == 0.7.0
 requests == 2.32.3
+ruff == 0.0.284
